--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 .ls-max-width{
     max-width: 80rem;
 }
+.ls-max-width-2{
+    max-width: 44rem;
+}
 .ls-ff-eb{
     font-family: 'EB Garamond', serif;
 }
@@ -20,7 +23,7 @@
     background-color: #B68C5A;
     color: white;
     padding: 0.5rem 1rem;
-    border-radius: 0.5rem;
+    border-radius: 0.375rem;
     border: none;
     transition: .5s ease-in-out;
 }
@@ -35,4 +38,12 @@
 }
 .ls-section-mt{
     margin-top: 7.5rem;
+}
+
+/* hero section */
+
+.hero{
+    background-image: url(./images/hero.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
