--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@
 .ls-ff-poppins{
     font-family: 'Poppins', sans-serif;
 }
+.ls-border{
+    border: 1px solid #E7E7E7;
+}
+.ls-hover:hover{
+    background-color: #F5F5F5;
+
+}
 .ls-btn-primary{
     background-color: #B68C5A;
     color: white;
