--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@
     top: 0;
     left: 0;
     z-index: 1;
+    border-radius: 10px;
 }
 /* carousel */
 .ls-carousel{
@@ -85,6 +86,7 @@
     top: 0;
     left: 0;
     z-index: 1;
+    border-radius: 10px;
 }
 .ls-carousel-2{
     background-image: url(./images/judges-gavel-scale-justice-black-table.jpg);
@@ -100,6 +102,7 @@
     top: 0;
     left: 0;
     z-index: 1;
+    border-radius: 10px;
 }
 .ls-carousel-3{
     background-image: url(./images/law-justice-concept-dark-background.jpg);
@@ -115,6 +118,7 @@
     top: 0;
     left: 0;
     z-index: 1;
+    border-radius: 10px;
 }
 /* contact */
 .address > * {
